--- a/styles.css
+++ b/styles.css
@@ -3,28 +3,52 @@
 * {
     font-family: Helvetica, "Calibri", sans-serif;
     box-sizing: border-box;
-    border: red dotted;
+    /* border: red dotted; */
 }
 
+body {
+    margin: 0px;
+}
 .main {
     background-color: rgb(255, 241, 222);
 }
+
+.banner {
+    background-color: rgb(181, 112, 69);
+    height: 50px;
+}
+
+p {
+    width: 70%;
+    margin: 0px auto;
+    text-align: center;
+}
 h1, h2, h3 {
+    width: 100%;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color :rgb(255, 209, 141);
+    border-top: 2px solid rgb(181, 112, 69);
+    border-bottom: 2px solid rgb(181, 112, 69);
 }
-
-li {
-    text-align: left;
+h1 {
+    margin-top: 0px;
 }
-
-.block {
-    color: black;
+.main-link {
+    width: 20%;
+    padding: 20px 20px;
+    margin: 15px auto;
+    text-decoration: none;
+    background-color: rgb(212, 147, 107);
+    color: rgb(255, 255, 255);
+    display: block;
+    text-align: center;
+    font-size: 16px;
 }
-
+.main-link:hover {
+    background-color: rgb(219, 136, 84);
+}
 .center {
-    width: 500px;
     margin: 0 auto;
     text-align: center;
 }
